1.2	2011-08-13

	Allow filename to be specified explicitly via "filename" stash
	parameter (suggested by Drew Taylor)

1.1.2	2011-07-26

	Fix files missing from MANIFEST and add a release.sh script to
	ensure that none of the arcane steps are missing from the Perl
	module release process

1.1.1	2011-07-23

	Reinstate changes accidentally obliterated by incorrect usage
	of git

1.1	2011-07-23

	Add support for arrays of hashes and arrays of objects
	(contributed by Benjamin Tietz)

1.0.1	2011-06-23

	Add some missing test dependencies to Makefile.PL

1.0	2011-06-20

	First released version