@@ -1,3 +1,6 @@
+	Fix compatibility with Catalyst::Plugin::Unicode::Encoding
+	(reported by Aleksey Vysokolov)
+
 1.2	2011-08-13
 
 	Allow filename to be specified explicitly via "filename" stash
